enhancement - UI: images did not scale that well due to the two coloumn layout.

--- a/src/components/portfolio.astro
+++ b/src/components/portfolio.astro
@@ -77,7 +77,7 @@ const projectItems: projectItemsT = [
       },
       details: {
         title: 'SmartTeam: for managing teams/projects',
-        idea: `I initially developed a typical project management application (a to-do app), but I found it too simplistic.
+        idea: `I initially developed a typical task management application (a to-do app), but I found it too simple to put on a portfolio.
                 As a result, I decided to create a more comprehensive version that not only manages tasks but also organizes
                 them within projects and groups of projects.`,
         obstacles: [
@@ -154,14 +154,14 @@ const projectItems: projectItemsT = [
                 <>
                     <div
                         aria-label="project box"
-                        class="flex flex-wrap justify-center gap-6"
+                        class="flex flex-col"
                     >
                         <div
                             aria-label="project preview"
                             class="grow basis-0 flex flex-col items-center mt-[3rem] animate-loadFromUp"
                         >
                             <Picture
-                                class="min-w-[280px] sxs>:min-w-0"
+                                class="min-w-[280px] sxs>:min-w-0 max-w-[40rem]"
                                 widths={[400, 600, 800]}
                                 aspectRatio={item.card.aspectRatio}
                                 formats={['webp']}
@@ -169,10 +169,20 @@ const projectItems: projectItemsT = [
                                 alt="project image"
                             />
 
+                        </div>
+
+                        <div
+                            aria-label="project details"
+                            class="grow basis-0 min-w-[250px] mt-[3rem] animate-loadFromDown"
+                        >
+                            <h3 class="capitalize mb-2 text-xl">{item.details.title}</h3>
+                            <p class="first-letter:uppercase text-gray-400 max-w-[40rem]">
+                                {item.details.idea}
+                            </p>
                             {/*check project buttons*/}
                             <div
                                 aria-label="project buttons"
-                                class="w-full flex-wrap flex justify-around gap-4 mt-5"
+                                class="w-full flex-wrap flex gap-4 my-5"
                             >
                                 {[
                                     // ['preview', 'ic:round-remove-red-eye', item.card.previewLink],
@@ -224,16 +234,6 @@ const projectItems: projectItemsT = [
                                     );
                                 })}
                             </div>
-                        </div>
-
-                        <div
-                            aria-label="project details"
-                            class="grow basis-0 min-w-[250px] mt-[3rem] animate-loadFromDown"
-                        >
-                            <h3 class="capitalize mb-2 text-xl">{item.details.title}</h3>
-                            <p class="first-letter:uppercase text-gray-400 max-w-md">
-                                {item.details.idea}
-                            </p>
                             <h4 class="capitalize text-lg mt-3 mb-2">
                                 Obstacles I Faced
                             </h4>
@@ -241,13 +241,13 @@ const projectItems: projectItemsT = [
                                 {item.details.obstacles.map((obs) => {
                                     return (
                                         <li>
-                                            <h5 class="capitalize">
+                                            <h5 class="capitalize max-w-[40rem]">
                                                 <span class="text-xl text-primary mr-2">
                                                     ⚡
                                                 </span>
                                                 {obs[0]}
                                             </h5>
-                                            <p class="ml-3 text-gray-400 first-letter:uppercase">
+                                            <p class="ml-3 max-w-[40rem] text-gray-400 first-letter:uppercase">
                                                 {obs[1]}
                                             </p>
                                         </li>
@@ -256,7 +256,7 @@ const projectItems: projectItemsT = [
                             </ul>
 
                             <h4 class="capitalize text-lg mt-3 mb-2">Tools Used</h4>
-                            <ul class="flex flex-wrap gap-3 py-2 max-w-lg">
+                            <ul class="flex flex-wrap gap-3 py-2 max-w-[40rem]">
                                 {item.details.tools.map((tool) => {
                                     return (
                                         <li class="text-gray-400 border-primary border-[1px] rounded-xl px-3 hover:rotate-[2deg] hover:scale-[1.1] duration-300">
