fix: a typo in the resume's path.

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -127,8 +127,8 @@ import SocialMedia from './shared/socialMedia.astro';
             <a
                 class={`text-primary capitalize py-[5px] border-[1px] border-primary px-3 py-2 rounded-xl
                         subtleHoverSlider group flex justify-center items-center`}
-                href="/media/anas-ouardini.pdf"
-                download="anas-ouardini.pdf"
+                href="/media/anas_ouardini.pdf"
+                download="anas_ouardini.pdf"
             >
                 <!-- <Icon
                     name="ic:outline-file-download"
