--- a/src/components/shared/socialMedia.astro
+++ b/src/components/shared/socialMedia.astro
@@ -41,7 +41,7 @@ const classes = {ul: Astro.props.style};
         </a>
     </li>
     <li>
-        <a href="https://github.com/segfaulty1" target="_blank">
+        <a href="https://github.com/anasouardini" target="_blank">
             <!-- <Icon
                 name="ri:github-line"
                 class="h-10 w-8 hover:scale-[1.2] duration-300"
