minor: added a blog icon to social media component.

--- a/src/components/shared/socialMedia.astro
+++ b/src/components/shared/socialMedia.astro
@@ -59,8 +59,11 @@ const classes = {ul: Astro.props.style};
         </a>
     </li>
     <li>
-        <a href="yesfordev.com" target="_blank">
-          My Blog
+        <a href="https://yesfordev.com/blog" target="_blank">
+          <Icon
+              name="icon-park-outline:writing-fluently"
+              class="h-10 w-8 hover:scale-[1.2] duration-300"
+          />
         </a>
     </li>
 </ul>
