enhancement: better accessibility.

--- a/src/components/contact.astro
+++ b/src/components/contact.astro
@@ -64,6 +64,6 @@ const classes = {
         </button>
     </form>
 
-    <h3 class="capitalize mx-auto w-max mt-10 text-xl">other methods</h3>
+    <h3 class="capitalize mx-auto w-max mt-10 text-xl">other channels</h3>
     <SocialMedia style="mx-auto w-max" />
 </section>
