--- a/src/components/portfolio.astro
+++ b/src/components/portfolio.astro
@@ -181,7 +181,7 @@ const projectItems: projectItemsT = [
                             </p>
                             {/*check project buttons*/}
                             <div
-                                aria-label="project buttons"
+                                aria-label="live preview and source code links"
                                 class="w-full flex-wrap flex gap-4 my-5"
                             >
                                 {[
