--- a/src/layouts/sharedLayout.astro
+++ b/src/layouts/sharedLayout.astro
@@ -124,7 +124,7 @@ if(section) {section.classList.add('active');}
 <slot />
 
 <footer class="mt-10 py-4 px-2 leading-7 text-center">
-    Copyright © 2023 | made by <span class="text-primary capitalize">Anas</span> using
+    Copyright © 2023 | made by <span class="text-primary capitalize">Anas Ouardini</span> using
     <!-- <Icon class="w-7 inline" name="vscode-icons:file-type-astro" /> -->
     <svg
         viewBox="0 0 32 32"
