--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -55,7 +55,7 @@ const lang: string = Astro.params.lang;
         <link rel="sitemap" href="/sitemap-index.xml" />
         <meta name="viewport" content="width=device-width" />
         <meta name="generator" content={Astro.generator} />
-        <title>anas</title>
+        <title>anas ouardini</title>
     </head>
     <body class="text-white bg-gray-900 overflow-x-hidden">
         <SharedLayout>
