--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -55,7 +55,10 @@ const lang: string = Astro.params.lang;
         <link rel="sitemap" href="/sitemap-index.xml" />
         <meta name="viewport" content="width=device-width" />
         <meta name="generator" content={Astro.generator} />
-        <title>anas ouardini</title>
+        <meta name="description" content=`I'm anas ouardini, a web engineer, and this is my personal website.
+                                          My projects, social media and my blog are linked here.
+                                          CLICK IT! YOU MIGHT LIKE WHAT YOU SEE.` />
+        <title>Anas Ouardini's personal website - my web projects, social links, blog, etc</title>
     </head>
     <body class="text-white bg-gray-900 overflow-x-hidden">
         <SharedLayout>
