--- a/src/components/shared/socialMedia.astro
+++ b/src/components/shared/socialMedia.astro
@@ -59,7 +59,7 @@ const classes = {ul: Astro.props.style};
         </a>
     </li>
     <li>
-        <a href="https://yesfordev.com/blog" target="_blank">
+        <a href="https://blog.anasouardini.online" target="_blank">
           <Icon
               name="icon-park-outline:writing-fluently"
               class="h-10 w-8 hover:scale-[1.2] duration-300"
