minor: removed some private info from my resume for public sharing.

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -142,14 +142,14 @@ import SocialMedia from './shared/socialMedia.astro';
                 <a
                     class={`text-primary capitalize px-4 py-[5px] border-[1px] border-primary px-3 py-2 rounded-xl
                             subtleHoverSlider group`}
-                    href="/media/anas_ouardini_fr.pdf"
-                    download="anas_ouardini.pdf">French</a
+                    href="/media/anas_ouardini_public.pdf"
+                    download="anas_ouardini_public.pdf">English</a
                 >
                 <a
                     class={`text-primary capitalize px-4 py-[5px] border-[1px] border-primary px-3 py-2 rounded-xl
                             subtleHoverSlider group`}
-                    href="/media/anas_ouardini.pdf"
-                    download="anas_ouardini.pdf">English</a
+                    href="/media/anas_ouardini_public.pdf"
+                    download="anas_ouardini_public.pdf">English</a
                 >
             </div>
             <script client:load>
