--- a/src/components/shared/socialMedia.astro
+++ b/src/components/shared/socialMedia.astro
@@ -60,10 +60,7 @@ const classes = {ul: Astro.props.style};
     </li>
     <li>
         <a href="https://blog.anasouardini.online" target="_blank">
-          <Icon
-              name="icon-park-outline:writing-fluently"
-              class="h-10 w-8 hover:scale-[1.2] duration-300"
-          />
+          <svg viewBox="0 0 48 48" class="h-10 w-8 hover:scale-[1.2] duration-300" astro-icon="icon-park-outline:writing-fluently"><g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="4"><path d="M24 24v-5L39 4l5 5-15 15h-5z" clip-rule="evenodd"/><path d="M16 24H9a5 5 0 0 0 0 10h30a5 5 0 0 1 0 10H18"/></g></svg>
         </a>
     </li>
 </ul>
