--- a/src/components/portfolio.astro
+++ b/src/components/portfolio.astro
@@ -217,6 +217,7 @@ const projectItems: projectItemsT = [
                                 ].map((button) => {
                                     return (
                                         <a
+                                            aria-label={button[0]}
                                             href={button[2]}
                                             target='_blank'
                                             class="w-max text-primary border-[1px] border-primary px-3 py-1 rounded-xl
