--- a/src/components/shared/socialMedia.astro
+++ b/src/components/shared/socialMedia.astro
@@ -5,7 +5,7 @@ const classes = {ul: Astro.props.style};
 
 <ul aria-label="socialMedia links" class={`flex gap-3 mt-5 text-primary ${classes.ul}`}>
     <li>
-        <a href="https://twitter.com/segfaulty1" target="_blank">
+        <a aria-label="twitter" href="https://twitter.com/segfaulty1" target="_blank">
             <!-- <Icon
                 name="ph:twitter-logo-bold"
                 class="h-10 w-8 hover:scale-[1.2] duration-300"
@@ -23,7 +23,7 @@ const classes = {ul: Astro.props.style};
         </a>
     </li>
     <li>
-        <a href="https://linkedin.com/in/anasouardini" target="_blank">
+        <a aria-label="LinkedIn" href="https://linkedin.com/in/anasouardini" target="_blank">
             <!-- <Icon
                 name="ri:linkedin-line"
                 class="h-10 w-8 hover:scale-[1.2] duration-300"
@@ -41,7 +41,7 @@ const classes = {ul: Astro.props.style};
         </a>
     </li>
     <li>
-        <a href="https://github.com/anasouardini" target="_blank">
+        <a aria-label="github" href="https://github.com/anasouardini" target="_blank">
             <!-- <Icon
                 name="ri:github-line"
                 class="h-10 w-8 hover:scale-[1.2] duration-300"
@@ -59,7 +59,7 @@ const classes = {ul: Astro.props.style};
         </a>
     </li>
     <li>
-        <a href="https://blog.anasouardini.online" target="_blank">
+        <a aria-label="my blog" href="https://blog.anasouardini.online/posts" target="_blank">
           <svg viewBox="0 0 48 48" class="h-10 w-8 hover:scale-[1.2] duration-300" astro-icon="icon-park-outline:writing-fluently"><g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="4"><path d="M24 24v-5L39 4l5 5-15 15h-5z" clip-rule="evenodd"/><path d="M16 24H9a5 5 0 0 0 0 10h30a5 5 0 0 1 0 10H18"/></g></svg>
         </a>
     </li>
