--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -68,7 +68,7 @@ const lang: string = Astro.params.lang;
     // }, 1000);
 </script>
 
-<html lang={lang}>
+<html lang="en-us">
     <head>
         <meta charset="utf-8" />
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
