update: updated my resume and added an updated french version.

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -145,15 +145,15 @@ import SocialMedia from './shared/socialMedia.astro';
                     aria-label="download english resume"
                     class={`text-primary capitalize px-4 py-[5px] border-[1px] border-primary px-3 py-2 rounded-xl
                             subtleHoverSlider group`}
-                    href="/media/anas_ouardini_public.pdf"
-                    download="anas_ouardini_public.pdf">English</a
+                    href="/media/resume-public.pdf"
+                    download="anas_ouardini.pdf">English</a
                 >
                 <a
                     aria-label="download english resume"
                     class={`text-primary capitalize px-4 py-[5px] border-[1px] border-primary px-3 py-2 rounded-xl
                             subtleHoverSlider group`}
-                    href="/media/anas_ouardini_public.pdf"
-                    download="anas_ouardini_public.pdf">English</a
+                    href="/media/resume-public-fr.pdf"
+                    download="anas_ouardini.pdf">French</a
                 >
             </div>
             <script client:load>
