--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -87,6 +87,17 @@ const lang: string = Astro.params.lang;
         <title>
             Anas Ouardini's personal website - my web projects, social links, blog, etc
         </title>
+
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-TV3YFNKPP4"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-TV3YFNKPP4');
+        </script>
+
     </head>
     <body class="text-white bg-gray-900 overflow-x-hidden">
         <SharedLayout>
