fix: fixed a typo, re-worded some phrases.

--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -281,25 +281,25 @@ const classes = {
             <tr class={`${classes.tableBorder} ${classes.selectiveHighlight}`}>
                 <td class={`${classes.tableBorder} ${classes.colPadding}`}>2015</td>
                 <td class={`${classes.tableBorder} ${classes.colPadding}`}
-                    >I was hooked with security.</td
+                    >Getting hooked with security.</td
                 >
             </tr>
             <tr class={`${classes.tableBorder} ${classes.selectiveHighlight}`}>
                 <td class={`${classes.tableBorder} ${classes.colPadding}`}>2017</td>
                 <td class={`${classes.tableBorder} ${classes.colPadding}`}
-                    >Introduced myself to web.</td
+                    >Introducing myself to web.</td
                 >
             </tr>
             <tr class={`${classes.tableBorder} ${classes.selectiveHighlight}`}>
                 <td class={`${classes.tableBorder} ${classes.colPadding}`}>2021</td>
                 <td class={`${classes.tableBorder} ${classes.colPadding}`}
-                    >Making windows binaries.</td
+                    >Developing windows binaries.</td
                 >
             </tr>
             <tr class={`${classes.tableBorder} ${classes.selectiveHighlight}`}>
                 <td class={`${classes.tableBorder} ${classes.colPadding}`}>2022</td>
                 <td class={`${classes.tableBorder} ${classes.colPadding}`}
-                    >I toke web seriously</td
+                    >Taking web seriously</td
                 >
             </tr>
         </table>
