--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -93,7 +93,7 @@ import SocialMedia from './shared/socialMedia.astro';
             for the web,
         </p>
         <p class={`max-w-[25rem] leading-relaxed first-letter:uppercase text-xl`}>
-            With the help of sweat technologies.
+            With the help of sweet technologies.
         </p>
         <SocialMedia />
         <div aria-label="Contact and resume (CV)" class="flex flex-wrap gap-7 mt-8">
