--- a/src/components/portfolio.astro
+++ b/src/components/portfolio.astro
@@ -42,17 +42,17 @@ const projectItems: projectItemsT = [
             idea: `An app for sharing pieces of code with others. It also has the feature of granting access
                     to one's account to another person, which involves a bit of authentication and authorization.`,
             obstacles: [
-                [
+                /*[
                     "I couldn't get google Auth to work",
                     "I've just gone through their documentation despite its longevity."
-                ],
+                ],*/
                 [
                     "I was losing a lot of time on tiny mistakes that would require a lot of debugging.",
-                    "I introduced TypeScript to the project which reduced the effectiveness of those pain points"
+                    "I introduced TypeScript to the project, which reduced the effectiveness of those pain points"
                 ],
                 [
-                    `I got slowed down by the fact that I couldn't revert back to an old state.`,
-                    `My Git commits weren't professional, but I learned how to write a proper commit, after which I got really
+                    `reverting back to an old working state of the project was painful.`,
+                    `My Git commits weren't professional, so I learned how to write proper commits, after which I got really
                     comfortable with browsing Git's history whenever I needed.`
                 ],
                 // [
@@ -92,9 +92,9 @@ const projectItems: projectItemsT = [
              to overcome these limitations and find workarounds.`
           ],
           [
-            `The Complexity of the Project Eventually Became Overwhelming, Hindering Further Progress.`,
+            `The Complexity of the Project Eventually Became Overwhelming, thus Hindering Further Progress.`,
             `Realizing that the accumulated complexity was becoming a hindrance, I recognized the need for refactoring.
-             I understood the importance of incorporating refactoring into my development process at more frequent intervals.`
+             I started incorporating refactoring into my development process at more frequent intervals.`
           ]
         ],
         tools: [
@@ -119,7 +119,7 @@ const projectItems: projectItemsT = [
               `I Couldn't Get Each Algorithm To Run In A Separate Thread (Web Worker) Without Spending Too Much Time.`,
               `To address this issue, I developed a custom "context switcher" as a solution, inadvertently reinventing
                 the wheel. However, this implementation allowed me to effectively manage running each algorithm in a separate
-                thread, saving valuable time.`
+                context, saving valuable time.`
             ],
             [
               `I Got Overwhelmed By the Project's Numerous Components.`,
